--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -15,6 +15,10 @@ app-root {
     left: 70%;
   }
 
+  .main-menu-content {
+    --background: var(--ion-color-secondary);
+  }
+
   .title-container {
     padding-top: var(--ion-safe-area-top);
   }
@@ -26,14 +30,14 @@ app-root {
   .split-pane-md.split-pane-visible>.split-pane-side {
     min-width: 77px;
     max-width: 180px;
-    border-right: var(--border);
+    border-right: 0; //var(--border);
     border-left: 0;
   }
 
   .split-pane-ios.split-pane-visible>.split-pane-side {
     min-width: 77px;
     max-width: 180px;
-    border-right: var(--border);
+    border-right: 0; //var(--border);
     border-left: 0;
   }
 
@@ -44,11 +48,6 @@ app-root {
 
   .menu.disabled {
     color: lightgrey;
-  }
-
-  ion-avatar {
-    width: 40px !important;
-    height : 40px !important;
   }
 
   #videoSpace {
@@ -66,87 +65,6 @@ app-root {
 
   $segment-button-ios-toolbar-font-size: 0.4rem;
   $segment-button-md-font-size: 0.4rem;
-
-
-  // calendar
-
-
-  .calendar-container {
-    width: 85%;
-    max-width: 400px;
-    margin: 10px auto;
-    padding-bottom: 10px;
-    --color: var(--ion-color-dark);
-  }
-
-  .month-title-container {
-    width: 100%;
-  }
-
-  .month-title {
-    width: calc((100% / 7) * 5);
-    text-align: center;
-    display: inline-block;
-  }
-
-  .calendar-arrow {
-    width: calc(100% / 7);
-    position: relative;
-    display: inline-block;
-    .left {
-      float: left;
-    }
-    .right {
-      float: right;
-    }
-  }
-
-  .monthview-day-headers {
-    width: calc(100% / 7);
-    float: left;
-    position: relative;
-    color: var(--ion-color-grey);
-    text-align: center;
-
-  }
-
-  .monthview-element {
-    width: calc(100% / 7);
-    float: left;
-    position: relative;
-    padding-bottom: calc(100% / 9);
-  }
-
-  .selected-date {
-    background-color: var(--ion-color-lightgrey);
-    border-radius: 50%;
-  }
-
-  .monthview-element .monthview-element-content {
-    width: calc(100% - 10px);
-    height: calc(100% - 10px);
-    text-align: center;
-    margin: 5px;
-    padding-top: 5px;
-    position: absolute;
-  }
-
-  .past-calendar-item {
-    background-color: var(--ion-color-grey);
-  }
-
-  .monthview-dot-container {
-    text-align: center;
-    display: inline-block;
-  }
-
-  .monthview-element-dot {
-    height: 5px;
-    width: 5px;
-    margin: 0px .5px 0px .5px;
-    border-radius: 50%;
-    background-color: var(--ion-color-primary);
-  }
 
 
   .list-container {
