--- a/src/app/pages/feature/manage/managefeature.page.scss
+++ b/src/app/pages/feature/manage/managefeature.page.scss
@@ -21,12 +21,10 @@ app-managefeature {
     height: 100%;
   }
 
-  .desktop-header {
+  .desktop-header-grid {
     //padding: 30px 0;
-    background-color: transparent !important;
+    background-color: var(--ion-color-lightgrey) !important;
     box-shadow: none !important;
-
-    --background: transparent !important;
 
     ion-col {
       box-shadow: 0 5px 10px rgba(0,0,0,.2);
@@ -57,11 +55,6 @@ app-managefeature {
   ion-router-outlet {
     border-left: 1px solid var(--ion-color-lightgrey);
   }
-
-/*  ion-content {
-    display: flex;
-    flex-direction: column;
-  }*/
 
   .bold-font {
     font-weight: bold;
