--- a/src/app/pages/connect/showrecipientinfo/showrecipientinfo.page.html
+++ b/src/app/pages/connect/showrecipientinfo/showrecipientinfo.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar class="header-toolbar" lines="none">
+  <ion-toolbar lines="none">
     <ion-buttons class="header-buttons" slot="start">
       <ion-button (click)="closeModal()" color="grey"><ion-icon name="chevron-back-outline"></ion-icon></ion-button>
     </ion-buttons>
