--- a/src/app/pages/feature/pickfeature-popover/pickfeature-popover.page.scss
+++ b/src/app/pages/feature/pickfeature-popover/pickfeature-popover.page.scss
@@ -4,6 +4,10 @@ app-pickfeature-popover {
   display: flex;
   flex-direction: column;
 
+  ion-content {
+    --background: var(--ion-color-lightgrey);
+  }
+
   ion-item ion-datetime{
     position: relative !important;
   }
