--- a/src/global.scss
+++ b/src/global.scss
@@ -56,10 +56,6 @@ ion-header {
   }
 }
 
-ion-content {
-  --background: var(--ion-color-lightgrey);
-}
-
 ion-item {
   -webkit-user-select: text;
   -moz-user-select: text;
@@ -84,6 +80,10 @@ p {
 .desktop-header-toolbar {
   --background: var(--ion-color-lightgrey);
   background-color: var(--ion-color-lightgrey);
+}
+
+.desktop-content {
+  --background: var(--ion-color-lightgrey);
 }
 
 .item-divider ion-label {
