--- a/src/app/pages/feature/showfeature/showfeature.page.html
+++ b/src/app/pages/feature/showfeature/showfeature.page.html
@@ -58,7 +58,7 @@
   </ion-buttons>
 </ion-header>
 
-<ion-content class="ion-padding-bottom" id="showfeature-content">
+<ion-content class="ion-padding-bottom" id="showfeature-content" [ngClass]="{'desktop-content': platform.width() >= 768 }">
   <ion-toolbar id="permissionBar" *ngIf="showSpecialAccess && loadStatus && setupPermissionCompleted">
     <!--Invitation Section-->
     <ion-item-sliding side="end" *ngIf="(participant_type === 2) && token">
