--- a/src/app/pages/user/user.page.html
+++ b/src/app/pages/user/user.page.html
@@ -21,7 +21,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content *ngIf="userData.user" forceOverscroll="false">
+<ion-content *ngIf="userData.user" forceOverscroll="false" [ngClass]="{'desktop-content': platform.width() >= 768 }">
   <ion-grid>
     <ion-row>
       <ion-col size-xs="12" size-sm="12" size-md="3" size-lg="3">
@@ -57,7 +57,7 @@
         </ion-list>
       </ion-col>
       <ion-col size-xs="0" size-sm="0" size-md="9" size-lg="9" *ngIf="this.platform.width() >= 768">
-        <ion-router-outlet></ion-router-outlet>
+        <ion-router-outlet style="margin-top: 5px"></ion-router-outlet>
       </ion-col>
     </ion-row>
   </ion-grid>
