fix ion-avatar css

--- a/src/app/pages/feature/manage/feature-childactivities/feature-childactivities.page.scss
+++ b/src/app/pages/feature/manage/feature-childactivities/feature-childactivities.page.scss
@@ -23,7 +23,9 @@ app-feature-childactivities {
   }
 
   .user-avatar {
-    margin: 0 auto;
+    margin: auto;
+    height: 40px;
+    width: 40px;
   }
 
   .name-label {
