--- a/src/app/pages/feature/manage/feature-childactivities/feature-childactivities.page.html
+++ b/src/app/pages/feature/manage/feature-childactivities/feature-childactivities.page.html
@@ -54,8 +54,8 @@
   </ion-list>
   <ion-grid *ngIf="view === '1'">
     <ion-row class="grid-row ion-align-items-center">
-      <ion-col size-xs="12" size-sm="6">
-        <ion-card class="category-card" mode="md" (click)="view = '2'">
+      <ion-col size-xs="6">
+        <ion-card class="category-card" mode="md" (click)="view = '2'" [ngStyle]="{'height': platform.width() >= 768 ? '300px' : '215px'}">
           <ion-card-content>
             <img src="assets/icon/create.svg" alt="Create Plan Icon">
             <br>
@@ -63,8 +63,8 @@
           </ion-card-content>
         </ion-card>
       </ion-col>
-      <ion-col size-xs="12" size-sm="6">
-        <ion-card class="category-card" mode="md" (click)="chooseFromMarketplace()">
+      <ion-col size-xs="6">
+        <ion-card class="category-card" mode="md" (click)="chooseFromMarketplace()" [ngStyle]="{'height': platform.width() >= 768 ? '300px' : '215px'}">
           <ion-card-content>
             <img src="assets/icon/template.svg" alt="Select Template Icon">
             <br>
@@ -86,15 +86,6 @@
             <ion-label position="stacked">{{categoryLabel}} Name</ion-label>
             <ion-input class="ion-text-start" type="text" [(ngModel)]="newActivityName" placeholder="Type a name here" (ionFocus)="loadSample()"></ion-input>
           </ion-item>
-   <!--       <ion-item class="ion-margin-vertical">
-            <ion-label position="stacked">Select the type of {{categoryLabel}}</ion-label>
-            <ion-select (ionChange)="loadSample($event)" [placeholder]="categoryLabel + ' Type'">
-              <ion-select-option value="5ea350d2dede5c7f29cf8490">Journey</ion-select-option>
-              <ion-select-option value="5ea398fadede5c7f29cf85c4">Group</ion-select-option>
-              <ion-select-option value="5df88e7669f2546c0a26a7f3">Mentoring</ion-select-option>
-              <ion-select-option value="5ea1fa876240cd58bb82a694">Program</ion-select-option>
-            </ion-select>
-          </ion-item>-->
           <ion-row class="ion-margin-vertical">
             <ion-button style="width: 100%;" [disabled]="!newActivityName || !selectedSample" expand="full" shape="round" (click)="createPlan()">
               <div>Create new {{categoryLabel}}</div>
