--- a/src/app/pages/feature/manage/feature-childactivities/feature-childactivities.page.scss
+++ b/src/app/pages/feature/manage/feature-childactivities/feature-childactivities.page.scss
@@ -23,7 +23,7 @@ app-feature-childactivities {
   }
 
   .user-avatar {
-    margin: auto;
+    margin: 5px auto;
     height: 40px;
     width: 40px;
   }
