--- a/src/app/pages/feature/showfeature/showfeature.page.scss
+++ b/src/app/pages/feature/showfeature/showfeature.page.scss
@@ -625,12 +625,16 @@ app-showfeature {
 
   .thumbnail-item {
     --size: 100%;
-    max-height: 200px;
+    max-height: 280px;
   }
 
   .video-container {
-    margin: 10px auto;
-    width: 90%;
+    margin: 0 auto;
+    width: 100%;
+  }
+
+  .video-container slideshow {
+    margin: 0 calc((100% - 540px)/2);
   }
 
   .selected-item {
